# trade_eyes_keeper

./: .flake8  .gitignore  .style.yapf  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _chk.py  _us2.py  audit_email.py  backtest_framework.py  check6.py  ci_cd_deploy.py  main.py  proj.md  proj4llm.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
config/: .env.example  __init__.py  alerts.yaml  config.yaml  config.yaml.example  optimizer.yaml  optimizer_constraints.yaml
docs/: architecture.md  audit_log.md  configuration.md  deployment.md  proj_compressed.md  proj_short.md  project_documentation.md  股息数据回归问题调查报告.md
hooks/: pre-commit  pre-commit.bat
scripts/: _debug_dates.py  _debug_quarterly.py  _plan_a_numba.py  _plan_b_all.py  _plan_b_quarterly.py  _plan_b_quick.py  _plan_b_v2.py  _preview_local.py  _quick_verify.py  _run_full_test.py  _run_plan_a.py  _run_plan_ab.py  _run_plan_b.py  _test_benchmarks.py  _test_optimizer_quick.py  _test_suggestions.py  _verify_benchmarks.py  cleanup.py  preview_position_target.py  run.bat  run.sh  server_init.sh
src/: __init__.py  alert_engine.py  alert_processor.py  alert_state_manager.py  announcement_fetcher.py  baostock_fetcher.py  cache_manager.py  cache_strategy.py  chart_generator.py  condition_checker.py  content_fetcher.py  data_fetcher.py  data_source.py  email_notifier.py  financial_report_fetcher.py  financial_report_manager.py  health_server.py  historical_data_manager.py  llm_analyzer.py  llm_analyzer_original.py  portfolio_strategy.py  rule_engine.py  scheduler_manager.py  session_manager.py  technical_indicators.py  web_crawler.py
temp_test_cache/: alerts_state.json
tests/: conftest.py  smoke_test.py  test_backtest_config.py  (+38 more)
(+150 files in other folders)
